[package]
name = "cardinal"
version = "0.1.0"
authors = ["liclac <hi@liclac.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0"
tracing = "0.1"
pcsc = "2"
bitflags = "1"
nom = "5"
serde = { version = "1", features = ["derive"] }

# binary-only dependencies; TODO: make library use not pull these down.
tracing-fmt = "0.0.1-alpha"
structopt = "0.2"
serde_json = "1.0"
