[package]
name = "cardinal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
thiserror = "1.0"
pcsc = "2"
apdu = "0.4"
nom = "7"
byteorder = "1"

# TODO: Remove.
bsn1 = "1.0"

# CLI
clap = { version = "4", features = [ "derive" ] }
anyhow = "1.0"
tracing-subscriber = "0.3"
