[package]
name = "cardinal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
thiserror = "1.0"
tap = "1"
pcsc = "2"
apdu = "0.4"
nom = "7"
byteorder = "1"
num_enum = "0.5"
scroll = "0.11"
encoding_rs = "0.8"

# CLI
clap = { version = "4", features = [ "derive" ] }
owo-colors = "3"
anyhow = "1.0"
tracing-subscriber = "0.3"
hex = "0.4"
